welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:13: error: not found: value reculer
    reculer()
    ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
  ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
             ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                        ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                                             ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                                                        ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                                                                                                      ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                                                                                                                 ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); growFlowers(Color.pink); avancer(); avancer(); avancer(); growFlowers(Color.green)
                                                                                                                            ^